--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,3 +20,12 @@ a {
 body {
   background-color: #8a714b;
 }
+
+.character-image{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%; /* This creates a circular shape */
+  object-fit: cover; /* Ensures the image covers the entire area */
+  border: 2px solid #fff; /* Adds a white border */
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* Adds a slight shadow */
+}
