--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,29 @@ body {
   background-color: #8a714b;
 }
 
+.sign-in{
+  background-repeat: no-repeat;
+  background-size: cover; /* Or 'contain', or specific dimensions like '100px 100px' */
+  background-position: center; 
+  background-image: url("https://images.playground.com/cdcb9fa7b586406ea1942dd2260a7d5d.jpeg");
+  height: 100vh;
+  padding: 30px;
+  max-width: auto;
+  margin: 0 auto;
+  color: #fff;
+}
+
+.login-btn{
+  margin: 0 auto;
+  width: 50%;
+  box-shadow: 5px 5px 5px rgb(10, 5, 5);
+}
+
+.login-sub-text{
+  color: rgb(250, 253, 253);
+  font-weight: 500;
+}
+
 .view-image{
   width: 100px;
   height: 100px;
@@ -39,30 +62,50 @@ body {
 }
 
 .character-card {
-  height: 90vh;
-  max-width: 400px;
-  margin: 0 auto;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center; 
-  gap: 10px;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 5px;  
+  margin: 0 auto;
+  padding: 10px; 
 }
 
 .selection-card {
-  flex: 1 1 30%; /* Adjust as needed for the number of cards in a row */
-  max-width: 70%; /* Ensure consistent width */
-  height: 300px; /* Fixed height for the cards */
+  flex: 0 0 20%;
+  max-width: 25%; 
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid #ddd; 
+  border: 1px solid #ddd;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin: 5px;
+}
+
+.card-image-container {
+  width: fit-content; /* Shrink-wrap around the content */
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;  
+}
+
+.card-image {
+  width: 100%; 
+  height: 100%;
+  border-radius: 50%; 
+  object-fit: cover; 
+  border: 2px solid #ffffff; 
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3); 
+}
+.card-body {
+  text-align: center;
 }
 
 .spell-card{
-  flex: 1 1 30%; /* Adjust as needed for the number of cards in a row */
+  flex: 1 1 30%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -78,7 +121,7 @@ body {
 }
 
 .character-container {
-  padding: 20px;
+  padding: 10px;
   max-width: 600px;
   margin: 0 auto;
   display: flex;
@@ -109,4 +152,32 @@ body {
 .spell-box {
   flex: 2;
   margin-left: 10px; 
+}
+
+.form {
+  margin: 3px;
+}
+
+.input {
+  border: 0;
+}
+
+.full-size {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box; 
+}
+
+.description-field{
+  width: 100%;
+  height: 100%;
+}
+
+.spell-description {
+
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  height: 100%; 
+  flex-grow: 1;
 }
