--- a/styles/globals.css
+++ b/styles/globals.css
@@ -116,8 +116,7 @@ body {
 
 .character-container {
   padding: 10px;
-  max-width: 600px;
-  margin: 0 auto;
+  max-width: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -140,13 +139,21 @@ body {
 }
 
 .character-view {
-  flex: 1;
+  flex: 0 0 33%;
   margin-right: 10px;
 }
 
-.spell-box {
-  flex: 2;
+.tab-box{
+  flex: 1;
   margin-left: 10px;
+}
+
+.tab-content {
+  margin-top: 7px;
+}
+
+.spell-box {
+padding: 10px
 }
 
 .input {
